Refactored Dockerfile